tests/baselines/reference/assignmentCompatForEnums.errors.txt
tests/cases/compiler/assignmentCompatForEnums.ts(11,29): error TS2339: Property 'one' does not exist on type '{}'.


==== tests/cases/compiler/assignmentCompatForEnums.ts (1 errors) ====
    enum TokenType { One, Two };
    
    var list = {};
    
    
    function returnType(): TokenType { return null; }
    
    function foo() {
        var x = returnType();
    
        var x: TokenType = list['one'];
                                ~~~~~
!!! error TS2339: Property 'one' does not exist on type '{}'.
    }
    
    